--- a/css/SCSS/_variables.scss
+++ b/css/SCSS/_variables.scss
@@ -2,7 +2,7 @@
 $screen-sm-min: 768px;
 $screen-lg-min: 1200px;
 
-$background_color: rgb(245, 245, 245);
+$background_color: #F5F5F5;
 
 $container-color: #FDFDFD;
 
@@ -10,7 +10,14 @@ $border-color: #E7E7E7;
 
 $font_color: #555;
 
-$color_1: rgb(70, 177, 230);
+$color_1: #1EB1E6;
 $color_1_light: lighten($color_1, 10%);
 $color_1_dark: darken($color_1, 10%);
 
+$color_2: #888998;
+$color_2_light: lighten($color_1, 10%);
+$color_2_dark: darken($color_1, 10%);
+
+$color_3: #3E4259;
+$color_3_light: lighten($color_1, 10%);
+$color_3_dark: darken($color_1, 10%);
