--- a/css/SCSS/pages/_dashboard.scss
+++ b/css/SCSS/pages/_dashboard.scss
@@ -11,19 +11,28 @@
 	    background: $container-color;
 	    display: inline-block;
 	    width: 100%;
-	    padding: 30px 0;
 	    border: 1px solid $border-color;
 	    border-radius: 3px;
+	    height: 300px;
 	}
 
 	
 	.data-container{
 		@extend .dashboard-container;
+		padding-top: 30px;
+	    padding-bottom: 30px;
+
+		.row{
+			margin-top: 15px;
+			margin-bottom: 15px;
+			display: inline-block;
+			width: 100%;
+		}
+
 
 		.data{
 			float: left;
 			margin-top: 10px;
-			padding-left: 0;
 			font-size: 150%;
 
 			.change{
@@ -43,7 +52,8 @@
 
 	.chart-container{
 		@extend .dashboard-container;
-		height: 300px;
+		padding-top: 30px;
+	    padding-bottom: 10px;
     	
 	}
 	
