--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,8 @@ body {
   font-family: 'Lato', helvetica, arial, sans-serif;
   font-weight: 400;
   color: #555;
-  background: whitesmoke;
-  background-image: linear-gradient(rgba(245, 245, 245, 0.8) 20%, rgba(70, 177, 230, 0.5) 250%), url(../images/background-shapes.svg);
+  background: #F5F5F5;
+  background-image: linear-gradient(rgba(245, 245, 245, 0.8) 20%, rgba(30, 177, 230, 0.5) 250%), url(../images/background-shapes.svg);
   background-repeat: repeat-x;
   background-position: bottom; }
 
@@ -64,6 +64,20 @@ body {
       height: 40px;
       float: left;
       padding-right: 10px; }
+  .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+    background-color: #F5F5F5; }
+
+svg {
+  font-family: 'Lato', helvetica, arial, sans-serif !important; }
+
+.color-1 {
+  color: #1EB1E6; }
+
+.color-2 {
+  color: #888998; }
+
+.color-3 {
+  color: #3E4259; }
 
 #dashboard {
   max-width: 1200px;
@@ -74,23 +88,31 @@ body {
     background: #FDFDFD;
     display: inline-block;
     width: 100%;
-    padding: 30px 0;
     border: 1px solid #E7E7E7;
-    border-radius: 3px; }
-  #dashboard .data-container .data {
-    float: left;
-    margin-top: 10px;
-    padding-left: 0;
-    font-size: 150%; }
-    #dashboard .data-container .data .change {
-      display: inline-block;
-      margin-left: 10px;
-      font-size: 80%; }
-  #dashboard .data-container .fa.large {
-    font-size: 50px;
-    text-align: center;
-    width: 100%; }
-  #dashboard .chart-container {
+    border-radius: 3px;
     height: 300px; }
+  #dashboard .data-container {
+    padding-top: 30px;
+    padding-bottom: 30px; }
+    #dashboard .data-container .row {
+      margin-top: 15px;
+      margin-bottom: 15px;
+      display: inline-block;
+      width: 100%; }
+    #dashboard .data-container .data {
+      float: left;
+      margin-top: 10px;
+      font-size: 150%; }
+      #dashboard .data-container .data .change {
+        display: inline-block;
+        margin-left: 10px;
+        font-size: 80%; }
+    #dashboard .data-container .fa.large {
+      font-size: 50px;
+      text-align: center;
+      width: 100%; }
+  #dashboard .chart-container {
+    padding-top: 30px;
+    padding-bottom: 10px; }
 
 /*# sourceMappingURL=main.css.map */
