Data moved to JSON
Weekly totals data created in JSON and used in the app

--- a/css/SCSS/main.scss
+++ b/css/SCSS/main.scss
@@ -7,8 +7,8 @@
 // Globals
 @import "_globals.scss";
 
-// Pages
-@import "pages/_dashboard.scss";
+// Sections
+@import "sections/_dashboard.scss";
 
 
 
