--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,9 @@ body {
   .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
     background-color: #F5F5F5; }
 
+section {
+  margin-bottom: 30px; }
+
 svg {
   font-family: 'Lato', helvetica, arial, sans-serif !important; }
 
@@ -82,7 +85,7 @@ svg {
 #dashboard {
   max-width: 1200px;
   padding-top: 81px;
-  padding-bottom: 180px; }
+  padding-bottom: 150px; }
   #dashboard .dashboard-container, #dashboard .data-container, #dashboard .chart-container {
     margin-bottom: 30px;
     background: #FDFDFD;
